# onair_monitor

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: cicd.yaml  publish.yaml  release.yaml
src/onair_monitor/: __init__.py  monitor.py
src/onair_monitor/resources/: onair-monitor.desktop
tests/: test_onair_monitor.py
