[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onair-monitor"
version = "0.1.0"
description = "Linux daemon that detects camera usage and notifies Home Assistant via webhooks."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Marius Helf", email = "marius@happyyeti.tech" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: No Input/Output (Daemon)",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
tray = [
    "pystray>=0.19",
    "Pillow>=9.0",
]
dev = [
    "pytest>=7.0",
]

[project.scripts]
onair-monitor = "onair_monitor.monitor:main"

[project.urls]
Homepage = "https://github.com/mariushelf/onair_monitor"
Repository = "https://github.com/mariushelf/onair_monitor"

[tool.hatch.build.targets.wheel]
packages = ["src/onair_monitor"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ANN"]
