[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onair-monitor"
version = "0.2.0"
description = "Linux daemon that detects camera usage and notifies Home Assistant via webhooks."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Marius Helf", email = "marius@happyyeti.tech" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: No Input/Output (Daemon)",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = []

[project.optional-dependencies]
tray = [
    "pystray>=0.19",
    "Pillow>=9.0",
    "pygobject>=3.54.5",
]
dev = [
    "pytest>=7.0",
]

[project.scripts]
onair-monitor = "onair_monitor.monitor:main"

[project.urls]
Homepage = "https://github.com/mariushelf/onair_monitor"
Repository = "https://github.com/mariushelf/onair_monitor"

[tool.hatch.build.targets.wheel]
packages = ["src/onair_monitor"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
lint.select = [
    "ANN", # flake8-annotations
    "E", # flake8
    "F", # flake8
    "I", # isort
    "D", # pydocstyle
    "S", # flake8-bandit
    "NPY", # numpy-specific rules
    "RUF", # ruff specific rules
]
lint.ignore = [
    "E501",
    "E712",
    "E731", # Do not assign a `lambda` expression, use a `def`
    "RUF013", # PEP 484 prohibits implicit `Optional`
    "ANN202", # Missing return type annotation for private function
    "ANN204", # Missing return type annotation for special function
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed

    # pydocstyle
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D106", # Missing docstring in public nested class
    "D401", # First line of docstring should be in imperative mood
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["S", "ANN", "D101", "D102", "D103"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
ignore-decorators = ["typing.override"]

[tool.ty.src]
#include = ["src", "tests"]
include = ["src"]


[[tool.ty.overrides]]
include = ["tests/**"]

[tool.ty.overrides.rules]
invalid-method-override = "ignore"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
allow_zero_version = true

[tool.semantic_release.branches.master]
match = "(master|main)"

[tool.semantic_release.branches.release]
match = "release/.*"

[tool.semantic_release.remote]
type = "github"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.2",
    "ty>=0.0.17",
]
